1.namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stubborn-ambient
  labels:
    kubernetes.io/metadata.name: stubborn-ambient
    istio.io/dataplane-mode: ambient
